@@ -1,3 +1,4 @@
+* Create move also from supplier to customer
 * Define "Stock Journal" on "Account Configuration"
 * Use cost price instead of unit price when cost method is "fixed"
 
